Added simple UI view

--- a/public/index.html
+++ b/public/index.html
@@ -1,14 +1,14 @@
-<html>
+<html lang="en">
 
 <head>
-    <title>Reddit Top Posts API</title>
-    <link rel="stylesheet" href="/stylesheets/style.css">
+  <title>Reddit Top Posts API</title>
 </head>
 
 <body>
-    <h1>Reddit Top Posts API</h1>
-    <h3>Simply use the route "/top-posts/[your desired subreddit]/[top posts count (optional)]</h3>
-    <p>coded by Pablo Kvitca (Last update: March 6th 2020)</p>
+  <h1>Reddit Top Posts API</h1>
+  <h3>Simply use the route "/top/[your desired subreddit]/[top posts count (optional)].</h3>
+  <h4>See README for details.</h4>
+  <p><i>Coded by Pablo Kvitca (Last update: March 6th 2020)</i></p>
 </body>
 
 </html>
